--- a/src/TODO
+++ b/src/TODO
@@ -1,5 +1,4 @@
-// TODO Fix Winner text
-// TODO crossmarks become local state in player view
+// TODO Color ready button differently
+// TODO Remove used cards from set of all possible cards so two people cant have same cards
 // TODO Remove unecessary boilerplate
 // TODO Write basic tests
-// TODO Remove card from set of all possible cards so two people cant have same cards
