--- a/src/TODO
+++ b/src/TODO
@@ -1,3 +1,4 @@
+// TODO Implement Rulesets
 // TODO Color ready button differently
 // TODO Remove used cards from set of all possible cards so two people cant have same cards
 // TODO Remove unecessary boilerplate
