--- a/src/TODO
+++ b/src/TODO
@@ -1,5 +1,15 @@
-// TODO Implement Rulesets
-// TODO Color ready button differently
-// TODO Remove used cards from set of all possible cards so two people cant have same cards
 // TODO Remove unecessary boilerplate
 // TODO Write basic tests
+// TODO Color ready button differently
+// TODO Winning Crossmarks should turn green
+// TODO Change Crossmarks color when crossmarks.length > 19 (20 marks is average bingo)
+// TODO Balls remaining color based on amount
+            * Bright Green @ 75 (default)
+            * Yellow-Green when 5 balls have been drawn in each column (Earliest possible bingo)
+            * Red 42
+// TODO Death Bingo
+// TODO Blackout Bingo
+// TODO Postage Stamp Rule
+// TODO Four Corners Rule
+// TODO Roving L Rule
+// TODO Remove used cards from set of all possible cards so two people cant have same cards using serial
