--- a/TODO
+++ b/TODO
@@ -7,6 +7,7 @@ High Priority
 // TODO Max active Games
 // TODO Max room size 
 // TODO Create users?
+// TODO Timeout socket.io connection with reconnect popup
 
 Development
 // TODO Push app to new branch once stable
@@ -19,6 +20,12 @@ Development
 // TODO Make List generation generic
 // TODO Add profiler tracing?
 // TODO Socket.io Tests https://socket.io/docs/v4/testing/#Example-with-jest
+
+Environment
+// TODO Use copyfiles or webpack(?) to move favicon from 'Public' to 'dist/Public' or something
+
+Hosting
+// TODO mongodB Atlas IP needs more strict whitelist
 
 QOL
 // TODO Remove used cards from set of all possible cards so two people cant have same cards using serial
