--- a/TODO
+++ b/TODO
@@ -1,5 +1,6 @@
 Bugs
 // TODO Prevent Join room that doesn't exist
+// TODO Player doesn't leave room on back button (socket.close? or window.onpopstate)
 
 High Priority
 // TODO Rest api use game "_id" instead of room id
