--- a/TODO
+++ b/TODO
@@ -1,6 +1,8 @@
 Bugs
+// When user clicks bingo host validation was skipped
 // TODO Prevent Join room that doesn't exist
 // TODO Player doesn't leave room on back button (socket.close? or window.onpopstate)
+// TODO Board Pixel 2 weird padding 
 
 High Priority
 // TODO Rest api use game "_id" instead of room id
@@ -29,6 +31,7 @@ Hosting
 // TODO mongodB Atlas IP needs more strict whitelist
 
 QOL
+// TODO Popup when user submits card for host and user
 // TODO Remove used cards from set of all possible cards so two people cant have same cards using serial
 // TODO Change color of ready check background
 // TODO Host has left game notification
