--- a/TODO
+++ b/TODO
@@ -1,21 +1,19 @@
 Bugs
-// TODO When user clicks bingo host validation was skipped
 // TODO Mobile winning crossmarks returns all crossmarks
 // TODO Prevent Join room that doesn't exist
 // TODO Player doesn't leave room on back button (socket.close? or window.onpopstate)
 // TODO Board Pixel 2 weird padding 
 
-High Priority
+Vulnerbilities
 // TODO Rest api use game "_id" instead of room id
-// TODO Rest Api auth
+// TODO Rest Api has no auth
 // TODO Max active Games
 // TODO Max room size 
-// TODO Create users?
+// TODO mongodB Atlas IP needs more strict whitelist
 // TODO Timeout socket.io connection with reconnect popup
 
 Development
-// TODO Push app to new branch once stable
-// TODO redis 
+// TODO redis
 // TODO Helmet
 // TODO MongoDB model timestamps?
 // TODO Socket.io error handling?
@@ -26,17 +24,16 @@ Development
 // TODO Socket.io Tests https://socket.io/docs/v4/testing/#Example-with-jest
 
 Environment
-// TODO Use copyfiles or webpack(?) to move favicon from 'Public' to 'dist/Public' or something
-
-Hosting
-// TODO mongodB Atlas IP needs more strict whitelist
+// TODO Use copyfiles or webpack(?) to move server favicon from 'Public' to 'dist/Public' or something
 
 QOL
+// TODO Create users?
+// TODO Improve room input behavior for typos
 // TODO Popup when user submits card for host and user
 // TODO Remove used cards from set of all possible cards so two people cant have same cards using serial
 // TODO Change color of ready check background
 // TODO Host has left game notification
-// TODO Show winner name on win
+// TODO Show winner name on win?
 // TODO Error Boundaries
 
 Future Features
