--- a/TODO
+++ b/TODO
@@ -20,6 +20,7 @@ Development
 
 Environment
 // TODO Use copyfiles or webpack(?) to move server favicon from 'Public' to 'dist/Public' or something
+
 heroku local web
 git push heroku-web-client main
 git push heroku-api main
@@ -27,18 +28,17 @@ heroku restart --remote heroku-api
 heroku logs -t --remote heroku-web-client
 
 QOL
-// TODO Add cogwheel menu with mute audio and dark mode?
-// TODO useDebugValue label my custom hooks?
 // TODO React ARIA for screen readers
 // TODO Create users?
 // TODO Implement useTitle
 // TODO Improve room input behavior for typos
 // TODO Popup when user submits card for host and user
-// TODO Remove used cards from set of all possible cards so two people cant have same cards using serial
 // TODO Change color of ready check background
 // TODO Host has left game popup notification
 // TODO Show winner name on win?
 // TODO Error Boundaries
+// TODO Cleanup consoles
+// TODO Remove used cards from set of all possible cards so two people cant have same cards using serial
 
 Future Features
 // TODO Public Rooms
