--- a/TODO
+++ b/TODO
@@ -18,6 +18,7 @@ DONE Bug: Multiplayer new ball no sound
 // TODO Snapshot update
 // TODO Bug: On leave room Bingo Song continues to play
 // TODO Check for 'test'
+// TODO Public Room Display busted
 
 Vulnerbilities
 // TODO Rest Api has no auth (JWT?)
