--- a/TODO
+++ b/TODO
@@ -22,7 +22,7 @@ DONE Bug: Multiplayer new ball no sound
 // TODO Move card creation to Server API in multiplayer mode
 // TODO Consider dispatch Contexts
 // TODO Bug: modal bug in storybook removeChild
-// TODO IPlayer & Player need unified types
+// TODO Consider adding Serial to Card
 
 Vulnerbilities
 // TODO Rest Api has no auth (JWT?)
