--- a/TODO
+++ b/TODO
@@ -12,19 +12,16 @@ DONE Bug: SOLO On win, Failure sounds retriggers
 // TODO Bug: On no bingo, failure for game room
 // TODO Bug: On send card, card sender shouldn’t get “A card being checked for bingo” TEST
 // TODO Refresh Play: breaks page, set game mode solo
-// TODO Refresh Play Multi: game in progress try again later
 DONE Bug: Multiplayer show progress indicator after host pushes ball
 DONE Bug: Multiplayer new ball no sound
 // TODO Snapshot update
-// TODO Bug: On leave room Bingo Song continues to play
-// TODO Check for 'test'
+DONE Bug: On leave room Bingo Song continues to play
 // TODO Public Room Display busted
-// TODO Move card creation to Server API in multiplayer mode
 // TODO Consider dispatch Contexts
 // TODO Bug: modal bug in storybook removeChild
-// TODO Consider adding Serial to Card
 
 Vulnerbilities
+// TODO Move card creation to Server API in multiplayer mode
 // TODO Rest Api has no auth (JWT?)
 // TODO Max active Games
 // TODO Max room size 
@@ -32,17 +29,16 @@ Vulnerbilities
 // TODO Timeout socket.io connection with reconnect popup
 
 Development
-// TODO clean up types
+// TODO Adding Serial to Card
+// TODO Remove material-ui from Create view
 // TODO Config Husky
 // TODO add @socket.io/admin-ui
-// TODO Rest api use game "_id" instead of room id
+// TODO Rest api use game "_id" instead of room id?
 // TODO MongoDB model timestamps?
 // TODO Socket.io error handling?
 // TODO Migrate to React Router v6
-// TODO Make List generation generic
 // TODO Add profiler tracing?
 // TODO Socket.io Tests https://socket.io/docs/v4/testing/#Example-with-jest
-// TODO Remove material-ui from Create view
 
 Environment
 // TODO Use copyfiles or webpack(?) to move server favicon from 'Public' to 'dist/Public' or something
@@ -54,26 +50,23 @@ heroku restart --remote heroku-api
 heroku logs -t --remote heroku-web-client
 
 QOL
+// TODO Update Favicon
+// TODO Persist Solo Mode
+// TODO Game in progress try again later on disconnect
 // TODO Add: Player join sound for host
-// TODO Add: No sound for send card
+// TODO Add: Sound for send card
 // TODO React ARIA for screen readers
 // TODO Create users?
 // TODO Implement useTitle
 // TODO Improve room input behavior for typos
 // TODO Popup when user submits card for host and user
-// TODO Host has left game popup notification
 // TODO Show winner name on win?
 // TODO Error Boundaries
-// TODO Cleanup consoles
 // TODO Remove used cards from set of all possible cards so two people cant have same cards using serial
 
 Future Features
 // TODO Public Rooms
 // TODO Streamer Mode
-// TODO Balls remaining color based on amount??
-            * Bright Green  - @ 75 (default)
-            * Yellow-Green  - when 5 balls have been drawn in each column (Earliest possible bingo)
-            * Red  - below 42 avg bingo
 // TODO Death Bingo!!!
 // TODO Blackout Bingo
 // TODO Postage Stamp Rule
