--- a/TODO
+++ b/TODO
@@ -21,6 +21,7 @@ DONE Bug: On leave room Bingo Song continues to play
 // TODO Bug: modal bug in storybook removeChild
 // TODO Bug: Back button no sound
 // TODO Make app responsive again
+// TODO Bug: Home doesn't init broken
 
 Vulnerbilities
 // TODO Prevent kicked player from rejoining (API & Socket)
