--- a/TODO
+++ b/TODO
@@ -24,6 +24,8 @@ DONE Bug: Home doesn't init broken
 // TOOD Bug: Modal isn't iside of phone
 DONE Bug: Home loader not centered
 // TODO On game save, put winners into an array on server. Game 1, Game 2, etc.
+// TODO SOLO: clear crossmarks doesn't work on replay
+// TODO Room doesn't exist failure show on screen
 
 Vulnerbilities
 // TODO Prevent kicked player from rejoining (API & Socket)
